--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -49,7 +49,7 @@
 @mixin textoDegradado($color) {
     margin-top: 5rem;
 
-    .uptask {
+    .degrade {
         background: linear-gradient(to right, $color 0%, lighten($color, 50%) 100%);
         color: transparent;
         background-clip: text;
