--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,5 +1,5 @@
 // Fuentes
-$fuente_headings: 'Inter', sans-serif;
+$fuente_headings: 'Josefin Sans', sans-serif;
 $fuente_textos: 'Open Sans', sans-serif;
 
 // Tamaño de Media Queries
@@ -8,17 +8,14 @@ $tablet: 768px;
 $desktop: 1024px;
 
 // Colores
-$cyan: #0383a3;
-$azul: #2563EB;
-$indigo: #4338CA;
-$morado: #7C3AED;
-$naranja:#F59E0B;
-$rosa: #DB2777;
+$primero: #171820;
+$segundo: #fdc029;
+$tercero: #df861d;
+$cuarto: #aa3d01;
+$quinto:#bcb6ae;
 
 $blanco: #FFFFFF;
 $gris: #6b7280;
-$grisOscuro: #4B5563;
-$grisClaro: #f3f4f6;
 $negro: #000;
 
 $rojo: rgb(169, 0, 0);
