--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -13,6 +13,15 @@ body {
     font-size: 1.6rem;
     min-height: 100%;
 }
+.contenedor {
+    width: 95%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+.contenedor-sm {
+    max-width: 70rem;
+    margin: 0 auto;
+}
 a {
     text-decoration: none;
 }
