--- a/src/scss/base/_tipografia.scss
+++ b/src/scss/base/_tipografia.scss
@@ -4,19 +4,19 @@ h1, h2, h3 {
     font-family: v.$fuente_headings;
     margin: 0 0 calc(v.$separacion / 2) 0 ;
     font-weight: 900;
+    text-align: center;
 }
 h1 {
-    font-size: 6rem;
+    font-size: 7rem;
 }
 h2 {
     font-size: 5rem;
 }
 h3 {
-    font-size: 4rem;
+    font-size: 3rem;
 }
 p {
-    font-size: 2rem;
-    color: v.$gris;
+    font-size: 1.5rem;
     line-height: 1.8;
 }
 
