Avanzando con los estilos y estructura del inicio

--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -13,18 +13,10 @@ body {
     font-size: 1.6rem;
     min-height: 100%;
 }
-.contenedor {
-    width: 95%;
-    max-width: 1200px;
-    margin: 0 auto;
-}
-.contenedor-sm {
-    max-width: 70rem;
-    margin: 0 auto;
-}
 a {
     text-decoration: none;
 }
 img {
-    max-width: 100%;
+    width: 100%;
+    height: auto;
 }
