--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -8,17 +8,17 @@ $tablet: 768px;
 $desktop: 1024px;
 
 // Colores
-$primero: #171820;
-$segundo: #fdc029;
-$tercero: #df861d;
-$cuarto: #aa3d01;
-$quinto:#bcb6ae;
+$negro: #171820;
+$amarillo: #fdc029;
+$anaranjado: #df861d;
+$marron: #8a370a;
+$gris:#bcb6ae;
 
-$blanco: #FFFFFF;
-$gris: #6b7280;
-$negro: #000;
+$white: #FFFFFF;
+$gray: #6b7280;
+$black: #000;
 
-$rojo: rgb(169, 0, 0);
-$verde: rgb(0, 120, 0);
+$red: rgb(169, 0, 0);
+$green: rgb(0, 120, 0);
 
 $separacion: 5rem;
