--- a/src/scss/pages/welcome/_header.scss
+++ b/src/scss/pages/welcome/_header.scss
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url(../img/fondo-header.jpg);
+    background-image: image-set(url(../img/fondo-header.avif) 1x, url(../img/fondo-header.webp) 1x, url(../img/fondo-header.jpg) 1x);
     background-size: cover;
     background-repeat: no-repeat;
     &::before {
@@ -21,12 +21,16 @@
 
     &__nav {
         width: 100%;
-        height: 7rem;
         display: flex;
-        justify-content: flex-end;
-        gap: 2rem;
         backdrop-filter: blur(1rem);
         box-shadow: 0.3rem 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
+        gap: 2rem;
+        
+        @include m.tablet {
+            height: 7rem;
+            justify-content: flex-end;
+
+        }
     }
 
     &__enlaces {
