--- a/src/scss/pages/welcome/_header.scss
+++ b/src/scss/pages/welcome/_header.scss
@@ -39,7 +39,7 @@
 
         &:hover {
             background-color: rgba(255, 255, 255, 0.1);
-            color: v.$anaranjado;
+            color: v.$amarillo;
             text-shadow: 0.3rem 0.3rem 0.5rem rgba(0, 0, 0, 1);
         }
     }
