--- a/src/scss/pages/welcome/_welcome.scss
+++ b/src/scss/pages/welcome/_welcome.scss
@@ -106,3 +106,16 @@
         transition-duration: .3s;
     }
 }
+
+#overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 0;
+    transition: opacity 0.8s;
+    z-index: 9999;
+}
