--- a/src/scss/ui/_nav.scss
+++ b/src/scss/ui/_nav.scss
@@ -4,10 +4,10 @@
 .nav {
     display: flex;
     flex-direction: row;
-    align-items: center;
     justify-content: space-between !important;
     width: 100%;
-    backdrop-filter: blur(1rem);
+    // backdrop-filter: blur(1rem);
+    background-color: v.$black;
     box-shadow: 0.3rem 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
     z-index: 2;
 
@@ -17,22 +17,37 @@
 
     }
 
+    &__contenedor {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+
     &__logo {
-        background-image: 
-            image-set(url(../img/logo2.avif) 1x,
-            url(../img/logo2.webp) 1x,
-            url(../img/logo2.png) 1x)
-        ;
         background-size: cover;
         background-repeat: no-repeat;
         width: 6rem;
         height: 6rem;
         margin: 2rem;
         z-index: 3;
+        background-image: 
+            image-set(url(../img/logo2.avif) 1x,
+            url(../img/logo2.webp) 1x,
+            url(../img/logo2.png) 1x)
+        ;
+        background-color: v.$white;
+        border-radius: 50%;
+
+        &:hover {
+            background-color: v.$marron;
+        }
     }
 
-    &__contenedor-enlaces {
-        display: flex;
+    &__name {
+        color: v.$white;
+        text-transform: uppercase;
+        font-size: 2.5rem;
+        font-weight: 700;
     }
 
     &__enlaces {
