--- a/src/scss/pages/_intro.scss
+++ b/src/scss/pages/_intro.scss
@@ -1,2 +1,29 @@
 @use 'base/variables' as v;
 @use 'base/mixins' as m;
+
+.intro {
+
+
+    &__aboutme {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        margin: 5rem;
+
+        &-foto {
+            width: 50rem;
+            min-width: 30rem;
+            height: 50rem;
+            min-height: 30rem;
+            background-color: red;
+            margin: 2rem 0 2rem 2rem;
+            object-fit: cover;
+        }
+
+        &-info {
+            text-align: left;
+            margin: 2rem 2rem 2rem 0;
+            width: 80rem;
+        }
+    }
+}
