--- a/src/scss/ui/_header.scss
+++ b/src/scss/ui/_header.scss
@@ -1,2 +1,10 @@
 @use 'base/variables' as v;
 @use 'base/mixins' as m;
+
+.header {
+    margin-top: 10rem;
+
+    &__titulo {
+        margin: 3rem;
+    }
+}
