--- a/src/scss/ui/_nav.scss
+++ b/src/scss/ui/_nav.scss
@@ -26,17 +26,16 @@
     }
 
     &__logo {
+        background-image: image-set(
+            url(../img/logo2.avif) 1x,
+            url(../img/logo2.webp) 1x,
+            url(../img/logo2.png) 1x);
         background-size: cover;
         background-repeat: no-repeat;
-        width: 6rem;
-        height: 6rem;
+        width: 5rem;
+        height: 5rem;
         margin: 2rem;
         z-index: 3;
-        background-image: 
-            image-set(url(../img/logo2.avif) 1x,
-            url(../img/logo2.webp) 1x,
-            url(../img/logo2.png) 1x)
-        ;
         background-color: v.$white;
         border-radius: 50%;
 
@@ -53,6 +52,31 @@
         color: v.$white;
     }
 
+    &__toggle-image {
+        background-image: url('../img/barras.avif');
+        background-size: cover;
+        background-position: 0%;
+        display: block;
+        cursor: pointer;
+        width: 5rem;
+        height: 5rem;
+        margin: 2rem;
+        z-index: 3;
+
+        @include m.desktop {
+            display: none;
+        }
+    }
+
+    &__links {
+        display: none;
+
+        @include m.desktop {
+            display: flex;
+            flex-direction: row;
+        }
+    }
+
     &__link {
         padding: 2rem;
         font-size: 2.5rem;
@@ -65,27 +89,6 @@
             background-color: rgb(255, 255, 255);
             color: v.$marron;
             font-weight: 700;
-        }
-    }
-
-    &__links {
-        display: none;
-      }
-      
-      // Estilo para el botón de alternancia
-      &__toggle-button {
-        display: block;
-        cursor: pointer; // Agregamos un puntero para indicar que es interactivo
-      }
-      
-      // Aplica estilos específicos para tablet (aumenta el alto)
-      @media (min-width: 768px) {
-        &__links {
-          display: flex; // Mostrar enlaces en tablet
-          flex-direction: row; // Alineación horizontal de los enlaces
-        }
-        &__toggle-button {
-          display: none; // Ocultar el botón en tablet
         }
     }
 }
