--- a/src/scss/ui/_nav.scss
+++ b/src/scss/ui/_nav.scss
@@ -3,12 +3,12 @@
 
 .nav {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    align-items: center;
     justify-content: space-between !important;
     position: fixed;
     top: 0;
     width: 100%;
-    // backdrop-filter: blur(1rem);
     background-color: v.$black;
     box-shadow: 0.3rem 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
     z-index: 2;
@@ -16,13 +16,35 @@
     @include m.tablet {
         height: 7rem;
         justify-content: flex-end;
-
+        flex-direction: row;
     }
 
     &__contenedor {
         display: flex;
         flex-direction: row;
         align-items: center;
+
+        &-logo {
+            @extend .nav__contenedor;
+            display: none;
+
+            @include m.tablet {
+                display: flex;
+            }
+
+            &--toggle {
+                @extend .nav__contenedor;
+                display: block;
+
+                @include m.desktop {
+                    display: none;
+                }
+            }
+        }
+
+        &-links {
+            @extend .nav__contenedor;
+        }
     }
 
     &__logo {
@@ -32,15 +54,21 @@
             url(../img/logo2.png) 1x);
         background-size: cover;
         background-repeat: no-repeat;
-        width: 5rem;
-        height: 5rem;
-        margin: 2rem;
+        width: 6rem;
+        height: 6rem;
+        margin: 1rem;
         z-index: 3;
         background-color: v.$white;
         border-radius: 50%;
 
         &:hover {
             background-color: v.$marron;
+        }
+        
+        @include m.tablet {
+            width: 5rem;
+            height: 5rem;
+            margin: 2rem;
         }
     }
 
@@ -50,6 +78,10 @@
         position: relative;
         z-index: 2;
         color: v.$white;
+
+        @include m.tablet {
+            margin: 1rem;
+        }
     }
 
     &__toggle-image {
@@ -58,10 +90,16 @@
         background-position: 0%;
         display: block;
         cursor: pointer;
-        width: 5rem;
-        height: 5rem;
-        margin: 2rem;
+        width: 6rem;
+        height: 6rem;
+        margin: 1rem;
         z-index: 3;
+
+        @include m.tablet {
+            width: 5rem;
+            height: 5rem;
+            margin: 2rem;
+        }
 
         @include m.desktop {
             display: none;
