--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -1,8 +1,8 @@
 @use 'base/variables' as v;
 
 /** Media Queries **/
-@mixin telefono {
-    @media (min-width: v.$telefono) {
+@mixin mobile {
+    @media (max-width: v.$tablet) {
         @content;
     }
 }
