--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -3,7 +3,7 @@ $fuente_headings: 'Josefin Sans', sans-serif;
 $fuente_textos: 'Open Sans', sans-serif;
 
 // Tamaño de Media Queries
-$telefono: 480px;
+$mobile: 480px;
 $tablet: 768px;
 $desktop: 992px;
 
