--- a/src/scss/templates/_nav.scss
+++ b/src/scss/templates/_nav.scss
@@ -13,51 +13,75 @@
     box-shadow: 0.3rem 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
     z-index: 2;
 
-    @include m.tablet {
-        flex-direction: row;
-    }
+    &-container {
+        width: 100%;
 
-    #nav-mobile, #nav-tablet, #nav-desktop {
-        display: none;
+        @include m.tablet {
+            justify-content: space-between;
+        }
     }
 
     @include m.mobile {
         #nav-mobile {
-            display: block;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        #nav-tablet, #nav-desktop {
+            display: none;
         }
     }
 
     @include m.tablet {
         #nav-tablet {
-            display: block;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+        }
+
+        #nav-mobile, #nav-desktop {
+            display: none;
         }
     }
 
     @include m.desktop {
         #nav-desktop {
-            display: block;
+            display: flex;
+            justify-content: space-between;
+            flex-direction: row;
+        }
+
+        #nav-mobile, #nav-tablet {
+            display: none;
         }
     }
-    
+
     &__contenedor {
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: center;
 
         &-logo {
-            display: block;
+            display: none;
 
             @include m.tablet {
                 display: flex;
+                align-items: center;
             }
 
             &--toggle {
-                display: none;
+                display: block;
 
-                @include m.tablet {
-                    display: block;
+                @include m.desktop {
+                    display: none;
                 }
             }
+        }
+
+        &-links {
+            @extend .nav__contenedor;
         }
     }
 
@@ -78,7 +102,7 @@
         &:hover {
             background-color: v.$marron;
         }
-        
+
         @include m.tablet {
             width: 5rem;
             height: 5rem;
@@ -123,17 +147,9 @@
     &__links {
         display: none;
 
-        @include m.mobile {
-            display: block;
-        }
-
-        @include m.tablet {
-            display: block;
-            flex-direction: column;
-        }
-
         @include m.desktop {
             display: flex;
+            flex-direction: row;
         }
     }
 
