--- a/src/scss/templates/_nav.scss
+++ b/src/scss/templates/_nav.scss
@@ -9,6 +9,7 @@
     position: fixed;
     top: 0;
     width: 100%;
+    height: 9rem;
     background-color: v.$black;
     box-shadow: 0.3rem 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
     z-index: 2;
