Ultimos proyectos en intro con un poco de styles y el nombre en el nav ahora te lleva a intro

--- a/src/scss/templates/_nav.scss
+++ b/src/scss/templates/_nav.scss
@@ -112,11 +112,15 @@
     }
 
     &__name {
-        font-size: 2.5rem;
+        font-size: 3rem;
         text-decoration: none;
         position: relative;
         z-index: 2;
         color: v.$white;
+
+        &:hover {
+            color: v.$marron;
+        }
 
         @include m.tablet {
             margin: 1rem;
