--- a/src/scss/pages/_intro.scss
+++ b/src/scss/pages/_intro.scss
@@ -26,4 +26,10 @@
             width: 80rem;
         }
     }
+
+    &__proyects {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
