--- a/src/scss/pages/_intro.scss
+++ b/src/scss/pages/_intro.scss
@@ -2,27 +2,34 @@
 @use 'base/mixins' as m;
 
 .intro {
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     &__aboutme {
+        background-color: v.$anaranjado;
+        border-radius: 1rem;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         margin: 5rem;
+        align-items: center;
+        height: 50rem;
+        width: 140rem;
 
         &-foto {
-            width: 50rem;
+            width: 40rem;
             min-width: 30rem;
-            height: 50rem;
+            height: 40rem;
             min-height: 30rem;
             background-color: red;
-            margin: 2rem 0 2rem 2rem;
+            margin: 2rem 5rem 2rem 2rem;
             object-fit: cover;
         }
 
         &-info {
             text-align: left;
-            margin: 2rem 2rem 2rem 0;
+            margin: 2rem 2rem 2rem 5rem;
             width: 80rem;
         }
     }
@@ -31,5 +38,11 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin: 1rem;
+
+        &__txt {
+            font-size: 2rem;
+            font-weight: 700;
+        }
     }
 }
