Agregando sombras y mejora visual

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -10,7 +10,7 @@ $desktop: 992px;
 // Colores
 $negro: #171820;
 $amarillo: #fdc029;
-$anaranjado: #df861d;
+$anaranjado: #e48c27;
 $marron: #8a370a;
 $gris:#bcb6ae;
 
