--- a/src/scss/templates/_proyects.scss
+++ b/src/scss/templates/_proyects.scss
@@ -13,6 +13,8 @@
         flex-direction: row;
         align-items: center;
         margin: 2rem;
+        background-color: v.$amarillo;
+        border-radius: 1rem;
     }
 
     &__info {
