--- a/src/scss/templates/_footer.scss
+++ b/src/scss/templates/_footer.scss
@@ -1,2 +1,8 @@
 @use 'base/variables' as v;
 @use 'base/mixins' as m;
+
+.footer {
+    margin-top: 5rem;
+    background-color: v.$black;
+    height: 15rem;
+}
