--- a/src/scss/templates/_nav.scss
+++ b/src/scss/templates/_nav.scss
@@ -9,13 +9,14 @@
     position: fixed;
     top: 0;
     width: 100%;
-    height: 9rem;
+    height: 7rem;
     background-color: v.$black;
     box-shadow: 0.3rem 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
     z-index: 2;
 
     &-container {
         width: 100%;
+        height: 100%;
 
         @include m.tablet {
             justify-content: space-between;
