--- a/src/scss/pages/_intro.scss
+++ b/src/scss/pages/_intro.scss
@@ -39,6 +39,7 @@
         flex-direction: column;
         align-items: center;
         margin: 1rem;
+        margin-top: 10rem;
 
         &-txt {
             font-size: 2rem;
@@ -47,7 +48,7 @@
     }
 
     &__contact {
-
+        margin: 10rem 0;
 
         &-txt {
             font-size: 2rem;
