--- a/src/scss/templates/_nav.scss
+++ b/src/scss/templates/_nav.scss
@@ -9,7 +9,7 @@
     position: fixed;
     top: 0;
     width: 100%;
-    height: 7rem;
+    height: 6rem;
     background-color: v.$black;
     box-shadow: 0.3rem 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
     z-index: 2;
@@ -94,33 +94,30 @@
             url(../img/logo2.png) 1x);
         background-size: cover;
         background-repeat: no-repeat;
-        width: 6rem;
-        height: 6rem;
+        width: 4.5rem;
+            height: 4.5rem;
         margin: 1rem;
         z-index: 3;
         background-color: v.$white;
         border-radius: 50%;
 
         &:hover {
-            background-color: v.$marron;
-        }
-
-        @include m.tablet {
-            width: 5rem;
-            height: 5rem;
-            margin: 2rem;
+            background-color: v.$amarillo;
         }
     }
 
     &__name {
-        font-size: 3rem;
+        font-size: 2.5rem;
+        padding: 1rem;
         text-decoration: none;
         position: relative;
         z-index: 2;
         color: v.$white;
 
         &:hover {
-            color: v.$marron;
+            color: v.$amarillo;
+            font-weight: 700;
+            border-bottom: 2px v.$amarillo solid;
         }
 
         @include m.tablet {
@@ -134,14 +131,12 @@
         background-position: 0%;
         display: block;
         cursor: pointer;
-        width: 5rem;
-        height: 5rem;
+        width: 4rem;
+        height: 4rem;
         margin: 1rem;
         z-index: 3;
 
         @include m.tablet {
-            width: 5rem;
-            height: 5rem;
             margin: 2rem;
         }
 
@@ -160,17 +155,17 @@
     }
 
     &__link {
-        padding: 2rem;
-        font-size: 2.5rem;
+        padding: 1rem 2rem;
+        font-size: 2rem;
         text-decoration: none;
         position: relative;
         z-index: 2;
         color: v.$white;
 
         &:hover {
-            background-color: rgb(255, 255, 255);
-            color: v.$marron;
+            color: v.$amarillo;
             font-weight: 700;
+            border-bottom: 2px v.$amarillo solid;
         }
     }
 }
