--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,6 +1,6 @@
 // Fuentes
-$fuente_headings: 'Josefin Sans', sans-serif;
-$fuente_textos: 'Open Sans', sans-serif;
+$fuente_headings: "proxima-nova-condensed","Helvetica", arial, sans-serif;
+$fuente_textos: "proxima-nova-condensed","Helvetica", arial, sans-serif;
 
 // Tamaño de Media Queries
 $mobile: 480px;
@@ -12,10 +12,10 @@ $negro: #171820;
 $amarillo: #fdc029;
 $anaranjado: #e48c27;
 $marron: #8a370a;
-$gris:#bcb6ae;
 
 $white: #FFFFFF;
-$gray: #6b7280;
+$gray: #313131;
+$gray-light: #696969;
 $black: #000;
 
 $red: rgb(169, 0, 0);
