--- a/src/scss/templates/_footer.scss
+++ b/src/scss/templates/_footer.scss
@@ -3,49 +3,32 @@
 
 .footer {
     display: flex;
+    justify-content: space-between;
     align-items: center;
     flex-direction: row;
     margin-top: 5rem;
     padding: 1rem;
     background-color: v.$black;
-    height: 30rem;
-
-    &__container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        border-right: 1px solid v.$gray;
-        padding: 2rem;
-        width: 100%;
-        height: 80%;
-
-        &:last-child {
-            border: none;
-        }
-    }
+    border-top: 1px solid v.$gray;
 
     &__logo {
+        background-image: image-set(
+            url(../img/logo2.avif) 1x,
+            url(../img/logo2.webp) 1x,
+            url(../img/logo2.png) 1x);
+        background-size: cover;
+        background-repeat: no-repeat;
+        width: 3.5rem;
+        height: 3.5rem;
+        margin: 1rem;
+        background-color: v.$white;
+        border-radius: 50%;
+    }
 
-        &-logo {
-            background-image: image-set(
-                url(../img/logo2.avif) 1x,
-                url(../img/logo2.webp) 1x,
-                url(../img/logo2.png) 1x);
-            background-size: cover;
-            background-repeat: no-repeat;
-            width: 8rem;
-            height: 8rem;
-            margin: 2rem;
-            z-index: 3;
-            background-color: v.$white;
-            border-radius: 50%;
-        }
-
-        &-name {
-            font-size: 2.5rem;
-            padding: 1rem;
-            color: v.$white;
-            margin: 0;
-        }
+    &__titule {
+        font-size: 1.5rem;
+        padding: 1rem;
+        color: v.$white;
+        margin: 0;
     }
 }
