--- a/src/scss/pages/_intro.scss
+++ b/src/scss/pages/_intro.scss
@@ -14,64 +14,36 @@
     }
 
     &__container {
+        display: flex;
+        flex-direction: column-reverse;
         background-color: v.$marron;
+        width: 80%;
+        height: 20%;
+        margin: 5rem;
+
+        @include m.desktop {
+            flex-direction: row;
+        }
     }
 
     &__aboutme {
-        border-radius: 1rem;
-        display: flex;
-        flex-direction: row;
         justify-content: space-between;
-        margin: 5rem;
         align-items: center;
-        height: 50rem;
-        width: 140rem;
 
         &-foto {
-            width: 40rem;
-            min-width: 30rem;
-            height: 40rem;
-            min-height: 30rem;
+            min-width: 40rem;
+            min-height: 40rem;
+            max-width: 40rem;
+            max-height: 40rem;
             background-color: red;
-            margin: 2rem 5rem 2rem 2rem;
+            margin: 3rem;
             object-fit: cover;
         }
 
         &-info {
             text-align: left;
-            margin: 2rem 2rem 2rem 5rem;
-            width: 80rem;
-        }
-    }
-
-    &__proyects {
-        display: flex;
-        flex-direction: column;
-        margin: 5rem;
-        padding: 1rem;
-        border-radius: 1rem;
-
-        &__proyect {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            margin: 2rem;
-            background-color: v.$anaranjado;
-            border-radius: 1rem;
-            
-            &-info {
-                max-width: 80rem;
-                margin: 2rem;
-            }
-        
-            &-img {
-                min-width: 50rem;
-                min-height: 30rem;
-                background-color: white;
-                margin: 2rem;
-                margin-right: 5rem;
-                background-color: red;
-            }
+            margin: 3rem;
+            width: 80%;
         }
     }
 
