--- a/src/scss/pages/_intro.scss
+++ b/src/scss/pages/_intro.scss
@@ -6,6 +6,36 @@
     flex-direction: column;
     align-items: center;
 
+    &__welcome {
+        width: 90%;
+        height: 80vh;
+        display: flex;
+        flex-direction: column;
+
+        &__titule {
+            padding: 1rem;
+            margin-top: 3rem;
+            @include m.tablet {
+                font-size: 9rem;
+            }
+        }
+
+        &__name {
+            padding: 1rem;
+            @include m.tablet {
+                font-size: 11rem;
+            }
+        }
+
+        &__iam {
+            padding: 1rem;
+            margin-top: 5rem;
+            @include m.tablet {
+                font-size: 2.5rem;
+            }
+        }
+    }
+
     &-txt {
         margin-top: 10rem;
         font-size: 2rem;
@@ -62,4 +92,4 @@
             }
         }
     }
-} 
+}
