--- a/src/scss/pages/_intro.scss
+++ b/src/scss/pages/_intro.scss
@@ -8,9 +8,10 @@
 
     &__welcome {
         width: 90%;
-        height: 80vh;
+        height: 70vh;
         display: flex;
         flex-direction: column;
+        margin: 5rem;
 
         &__titule {
             padding: 1rem;
@@ -22,25 +23,17 @@
 
         &__name {
             padding: 1rem;
+            color: v.$anaranjado;
             @include m.tablet {
                 font-size: 11rem;
-            }
-        }
-
-        &__iam {
-            padding: 1rem;
-            margin-top: 5rem;
-            @include m.tablet {
-                font-size: 2.5rem;
             }
         }
     }
 
     &-txt {
-        margin-top: 10rem;
+        padding: 1rem;
+        margin-top: 5rem;
         font-size: 2rem;
-        font-weight: 700;
-        text-align: center;
     }
 
     &__container {
