Se volvio a agregar las distintas versiones del nav pero modificado y se elimino lo del swiper

--- a/src/scss/templates/_nav.scss
+++ b/src/scss/templates/_nav.scss
@@ -109,6 +109,7 @@
 
     &__name {
         padding: 1rem 2rem;
+        margin: 0;
         font-size: 2rem;
         text-decoration: none;
         position: relative;
@@ -167,7 +168,6 @@
 }
 
 .active {
-    border-bottom: 1px solid v.$anaranjado;
     color: v.$anaranjado;
 
     &:hover {
