Fondo con color en la parte del welcome, y para hacer que la imagen ocupe toda la pantlla se creo un ternario en el header que cambia el margin-top

--- a/src/scss/templates/_header.scss
+++ b/src/scss/templates/_header.scss
@@ -2,10 +2,13 @@
 @use 'base/mixins' as m;
 
 .header {
-    margin-top: 15rem;
 
     &__titulo {
         margin: 3rem;
         text-align: center;
+    }
+
+    &-margin15 {
+        margin-top: 15rem;
     }
 }
