--- a/src/scss/pages/_intro.scss
+++ b/src/scss/pages/_intro.scss
@@ -7,15 +7,37 @@
     align-items: center;
 
     &__welcome {
-        width: 90%;
-        height: 80vh;
+        position: relative;
+        width: 100%;
+        height: 100vh;
         display: flex;
         flex-direction: column;
-        margin: 5rem;
+        justify-content: center;
+        padding: 6rem;
+        margin-bottom: 15rem;
+        background-image: image-set(
+            url(../img/fondo-prog.avif) 1x,
+            url(../img/fondo-prog.webp) 1x,
+            url(../img/fondo-prog.png) 1x);
+        background-size: cover;
+        background-repeat: no-repeat;
+
+        &::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(270deg, rgba(138,55,10,0.6502976190476191) 0%, rgba(70,26,3,0.65) 100%);
+            z-index: 1;
+        }
 
         &__titule {
             padding: 1rem;
             margin-top: 3rem;
+            z-index: 2;
+
             @include m.tablet {
                 font-size: 9rem;
             }
@@ -24,6 +46,8 @@
         &__name {
             padding: 1rem;
             color: v.$anaranjado;
+            z-index: 2;
+
             @include m.tablet {
                 font-size: 11rem;
             }
@@ -34,18 +58,7 @@
         padding: 1rem;
         margin-top: 5rem;
         font-size: 2rem;
-    }
-
-    &__container {
-        display: flex;
-        flex-direction: column-reverse;
-        width: 95%;
-        height: 20%;
-        margin: 2rem;
-
-        @include m.desktop {
-            flex-direction: row;
-        }
+        z-index: 2;
     }
 
     &__aboutme {
@@ -70,7 +83,7 @@
     }
 
     &__contact {
-        margin: 10rem 0;
+        margin-bottom: 15rem;
 
         &-btn {
             @include m.boton(v.$amarillo, v.$black);
@@ -90,7 +103,8 @@
         flex-direction: column;
         align-items: center;
         padding: 1rem;
-        width: 100%;
+        margin-bottom: 10rem;
+        width: 90%;
     
         &-proyect {
             display: flex;
