creacion de clases de titulos y se escribireron las clases en el archivo de estilos (sin estilos)

--- a/src/scss/pages/_aboutme.scss
+++ b/src/scss/pages/_aboutme.scss
@@ -28,4 +28,116 @@
             width: 80%;
         }
     }
+
+    &__tech {
+
+
+        &-titule {
+
+        }
+
+        &-titules {
+
+        }
+
+        &-logo {
+
+        }
+    }
+}
+
+#aboutme__logo-html {
+    background-image: url('');    
+}
+
+#aboutme__logo-css {
+    background-image: url('');
+}
+
+#aboutme__logo-sass {
+    background-image: url('');
+}
+
+#aboutme__logo-js {
+    background-image: url('');
+}
+
+#aboutme__logo-bootsrap {
+    background-image: url('');
+}
+
+#aboutme__logo-react {
+    background-image: url('');
+}
+
+#aboutme__logo-redux {
+    background-image: url('');
+}
+
+#aboutme__logo-next {
+    background-image: url('');
+}
+
+#aboutme__logo-tail {
+    background-image: url('');
+}
+
+#aboutme__logo-gatsby {
+    background-image: url('');
+}
+
+#aboutme__logo-php {
+    background-image: url('');
+}
+
+#aboutme__logo-sql {
+    background-image: url('');
+}
+
+#aboutme__logo-mysql {
+    background-image: url('');
+}
+
+#aboutme__logo-node {
+    background-image: url('');
+}
+
+#aboutme__logo-git {
+    background-image: url('');
+}
+
+#aboutme__logo-github {
+    background-image: url('');
+}
+
+#aboutme__logo-gulp {
+    background-image: url('');
+}
+
+#aboutme__logo-webpack {
+    background-image: url('');
+}
+
+#aboutme__logo-npm {
+    background-image: url('');
+}
+
+#aboutme__logo-composer {
+    background-image: url('');
+}
+
+#aboutme__logo-postman {
+    background-image: url('');
+}
+
+#aboutme__logo-cypress {
+    background-image: url('');
+}
+
+#aboutme__logo-graph {
+    background-image: url('');
+}
+
+#aboutme__logo-firebase {
+    background-image: url('');
 }
