un poco de estilos

--- a/src/scss/pages/_aboutme.scss
+++ b/src/scss/pages/_aboutme.scss
@@ -30,7 +30,7 @@
     }
 
     &__tech {
-
+        
 
         &-titule {
 
@@ -38,6 +38,10 @@
 
         &-titules {
 
+        }
+
+        &-list {
+            list-style: none;
         }
 
         &-logo {
