--- a/src/scss/pages/_aboutme.scss
+++ b/src/scss/pages/_aboutme.scss
@@ -30,22 +30,50 @@
     }
 
     &__tech {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        &-section {
+            width: 80%;
+            background-color: v.$anaranjado;
+        }
+
+        &-element {
+                display: flex;
+            flex-direction: column-reverse;
+            align-items: center;
+            justify-content: center;
+            width: 10rem;
+            height: 10rem;
+            margin: 1rem;
+            padding: .5rem;
+            background-color: v.$marron;
+            border-radius: 50%;
+        }
         
-
         &-titule {
-
+            
         }
 
         &-titules {
+            font-size: 5rem;
+            margin: 0;
+        }
 
+        &-name {
+            font-size: 2rem;
+            margin: 0;
         }
 
         &-list {
             list-style: none;
+            width: 100%;
+            @include m.grid(4, 2rem);
         }
 
         &-logo {
-            margin: .5rem;
+            margin: 1rem;
             width: 4rem;
             height: 4rem;
         }
