--- a/src/scss/pages/_aboutme.scss
+++ b/src/scss/pages/_aboutme.scss
@@ -35,47 +35,64 @@
         align-items: center;
 
         &-section {
-            width: 80%;
+            width: 90%;
+            margin: 3rem;
+            padding: 2rem;
             background-color: v.$anaranjado;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         &-element {
-                display: flex;
+            display: flex;
             flex-direction: column-reverse;
             align-items: center;
-            justify-content: center;
-            width: 10rem;
-            height: 10rem;
-            margin: 1rem;
-            padding: .5rem;
+            width: 15rem;
+            height: 11rem;
+            position: relative;
+            bottom: 0;
+            margin: 3rem;
+            padding: 1rem;
             background-color: v.$marron;
-            border-radius: 50%;
+            border-radius: 1rem;
+
+            &::before {
+                content: "";
+                position: absolute;
+                bottom: 0;
+            }
         }
         
         &-titule {
-            
+            text-align: center;
+            margin-top: 20rem;
+            font-size: 5rem;
         }
 
         &-titules {
             font-size: 5rem;
-            margin: 0;
+            margin: .5rem;
+            font-weight: 700;
+            color: v.$black;
         }
-
+        
         &-name {
-            font-size: 2rem;
-            margin: 0;
+            font-size: 2.5rem;
+            margin: 0rem;
+            color: v.$white;
+            font-weight: 600;
         }
 
         &-list {
             list-style: none;
-            width: 100%;
-            @include m.grid(4, 2rem);
+            @include m.grid(5, 5rem);
         }
 
         &-logo {
             margin: 1rem;
-            width: 4rem;
-            height: 4rem;
+            width: 7rem;
+            height: 7rem;
         }
     }
 }
