imagen en aboutme

--- a/src/scss/pages/_aboutme.scss
+++ b/src/scss/pages/_aboutme.scss
@@ -17,9 +17,14 @@
             min-height: 40rem;
             max-width: 40rem;
             max-height: 40rem;
-            background-color: red;
+            background-image: image-set(
+                url(../img/yo.avif) 1x,
+                url(../img/yo.webp) 1x,
+                url(../img/yo.png) 1x);
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
             margin: 3rem;
-            object-fit: cover;
         }
     
         &-info {
