--- a/src/scss/pages/_intro.scss
+++ b/src/scss/pages/_intro.scss
@@ -1,5 +1,5 @@
-@use 'base/variables' as v;
-@use 'base/mixins' as m;
+@use "base/variables" as v;
+@use "base/mixins" as m;
 
 .intro {
     display: flex;
@@ -18,7 +18,8 @@
         background-image: image-set(
             url(../img/fondo-prog.avif) 1x,
             url(../img/fondo-prog.webp) 1x,
-            url(../img/fondo-prog.png) 1x);
+            url(../img/fondo-prog.png) 1x
+        );
         background-size: cover;
         background-repeat: no-repeat;
 
@@ -29,7 +30,11 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: linear-gradient(270deg, rgba(138,55,10,0.6502976190476191) 0%, rgba(70,26,3,0.65) 100%);
+            background: linear-gradient(
+                270deg,
+                rgba(138, 55, 10, 0.6502976190476191) 0%,
+                rgba(70, 26, 3, 0.65) 100%
+            );
             z-index: 1;
         }
 
@@ -84,7 +89,7 @@
         padding: 1rem;
         margin-bottom: 10rem;
         width: 90%;
-    
+
         &-proyect {
             display: flex;
             flex-direction: column;
@@ -92,24 +97,20 @@
             margin: 2rem;
             background-color: v.$anaranjado;
             width: auto;
-            
+
             @include m.desktop {
                 flex-direction: row;
                 width: 100%;
             }
-    
+
             &-info {
                 width: 100%;
                 margin: 2rem;
                 padding: 0 3rem;
                 color: v.$black;
             }
-    
+
             &-img {
-                background-image: image-set(
-                    url(../img/fondo-prog.avif) 1x,
-                    url(../img/fondo-prog.webp) 1x,
-                    url(../img/fondo-prog.png) 1x);
                 background-size: cover;
                 background-repeat: no-repeat;
                 min-width: 35rem;
@@ -123,4 +124,28 @@
             }
         }
     }
+}
+
+#proyecto1 {
+    background-image: image-set(
+        url(../img/proyecto1.avif) 1x,
+        url(../img/proyecto1.webp) 1x,
+        url(../img/proyecto1.png) 1x
+    );
+}
+
+#proyecto2 {
+    background-image: image-set(
+        url(../img/proyecto2.avif) 1x,
+        url(../img/proyecto2.webp) 1x,
+        url(../img/proyecto2.png) 1x
+    );
+}
+
+#proyecto3 {
+    background-image: image-set(
+        url(../img/proyecto3.avif) 1x,
+        url(../img/proyecto3.webp) 1x,
+        url(../img/proyecto3.png) 1x
+    );
 }
