--- a/src/scss/pages/_intro.scss
+++ b/src/scss/pages/_intro.scss
@@ -13,7 +13,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        padding: 6rem;
+        padding: 2rem;
         margin-bottom: 15rem;
         background-image: image-set(
             url(../img/fondo-prog.avif) 1x,
@@ -22,6 +22,10 @@
         );
         background-size: cover;
         background-repeat: no-repeat;
+
+        @include m.tablet {
+            padding: 6rem;
+        }
 
         &::before {
             content: "";
@@ -42,8 +46,12 @@
             padding: 1rem;
             margin-top: 3rem;
             z-index: 2;
+            font-size: 4rem;
 
             @include m.tablet {
+                font-size: 7rem;
+            }
+            @include m.desktop {
                 font-size: 9rem;
             }
         }
@@ -52,8 +60,12 @@
             padding: 1rem;
             color: v.$anaranjado;
             z-index: 2;
-
+            font-size: 5rem;
+            
             @include m.tablet {
+                font-size: 7rem;
+            }
+            @include m.desktop {
                 font-size: 11rem;
             }
         }
@@ -64,6 +76,7 @@
         margin-top: 5rem;
         font-size: 2rem;
         z-index: 2;
+        min-width: 90vw;
     }
 
     &__contact {
@@ -115,7 +128,7 @@
                 background-repeat: no-repeat;
                 background-position: center;
                 min-width: 35rem;
-                min-height: 15rem;
+                min-height: 20rem;
                 margin: 3rem;
 
                 @include m.tablet {
