--- a/src/scss/pages/_intro.scss
+++ b/src/scss/pages/_intro.scss
@@ -44,7 +44,7 @@
 
         &__titule {
             padding: 1rem;
-            margin-top: 3rem;
+            margin-top: 10rem;
             z-index: 2;
             font-size: 4rem;
 
@@ -66,7 +66,7 @@
                 font-size: 7rem;
             }
             @include m.desktop {
-                font-size: 11rem;
+                font-size: 10rem;
             }
         }
     }
@@ -77,6 +77,11 @@
         font-size: 2rem;
         z-index: 2;
         min-width: 90vw;
+    }
+
+    &-txt-center {
+        @extend .intro-txt;
+        text-align: center;
     }
 
     &__contact {
