ajuste tamaño boton y texto arriba del boton centrado

--- a/src/scss/pages/_intro.scss
+++ b/src/scss/pages/_intro.scss
@@ -85,7 +85,10 @@
     }
 
     &__contact {
+        display: flex;
+        flex-direction: column;
         margin-bottom: 15rem;
+        align-items: center;
 
         &-btn {
             @include m.boton(v.$anaranjado, v.$black);
