Las tecnologias no estan en un grid, ahora estan en un wrap, ademas se puso en justificado los txtos de los proyectos y se saco el border radius

--- a/src/scss/pages/_aboutme.scss
+++ b/src/scss/pages/_aboutme.scss
@@ -60,7 +60,6 @@
             margin: 2rem;
             padding: 1rem;
             background-color: v.$marron;
-            border-radius: 1rem;
 
             &::before {
                 content: "";
@@ -91,7 +90,10 @@
 
         &-list {
             list-style: none;
-            @include m.grid(5, 2rem);
+            justify-content: center;
+            display: flex;
+            flex-wrap: wrap;
+            padding: 0;
         }
 
         &-logo {
