--- a/src/scss/pages/_intro.scss
+++ b/src/scss/pages/_intro.scss
@@ -129,6 +129,7 @@
                 margin: 2rem;
                 padding: 0 3rem;
                 color: v.$black;
+                text-align: justify;
             }
 
             &-img {
