se agregar 5 tecnologias al intro y se agregar botones para poder ir a las distintas paginas en lugar de solo poder ir a travez del nav

--- a/src/scss/pages/_intro.scss
+++ b/src/scss/pages/_intro.scss
@@ -84,7 +84,7 @@
         text-align: center;
     }
 
-    &__contact {
+    &__moreinfo {
         display: flex;
         flex-direction: column;
         margin-bottom: 15rem;
