--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -1,4 +1,5 @@
 @use 'variables' as v;
+@use 'mixins' as m;
 
 *, *:before, *:after {
     box-sizing: inherit;
@@ -21,4 +22,16 @@ a {
 img {
     width: 100%;
     height: auto;
+}
+
+.btnGeneral {
+    @include m.boton(v.$anaranjado, v.$black);
+    margin: 3rem;
+    box-shadow: 0.3rem 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
+    font-size: 2.5rem;
+
+    &:hover {
+        text-shadow: 0.3rem 0.3rem 0.5rem rgba(0, 0, 0, 0.6);
+        background-color: v.$marron;
+    }
 }
