--- a/src/scss/pages/_intro.scss
+++ b/src/scss/pages/_intro.scss
@@ -52,7 +52,7 @@
                 font-size: 7rem;
             }
             @include m.desktop {
-                font-size: 9rem;
+                font-size: 8rem;
             }
         }
 
@@ -66,17 +66,21 @@
                 font-size: 7rem;
             }
             @include m.desktop {
-                font-size: 10rem;
+                font-size: 9rem;
             }
         }
     }
 
     &-txt {
         padding: 1rem;
-        margin-top: 5rem;
-        font-size: 2rem;
+        margin-top: 2rem;
+        font-size: 1.5rem;
         z-index: 2;
         min-width: 90vw;
+
+        @include m.tablet {
+            font-size: 2rem;
+        }
     }
 
     &-txt-center {
