--- a/src/scss/templates/_nav.scss
+++ b/src/scss/templates/_nav.scss
@@ -66,13 +66,8 @@
         justify-content: center;
 
         &-logo {
-            display: none;
-
-            @include m.tablet {
-                display: flex;
-                align-items: center;
-                margin-left: 1rem;
-            }
+            display: flex;
+            align-items: center;
 
             &--toggle {
                 display: block;
@@ -84,7 +79,11 @@
         }
 
         &-links {
+            width: 100%;
             @extend .nav__contenedor;
+            @include m.tablet {
+                width: auto;
+            }
         }
     }
 
@@ -180,4 +179,20 @@
         border-bottom: 1px solid v.$anaranjado;
         color: v.$anaranjado;
     }
+}
+
+#navLinks {
+    display: none;
+    
+    @include m.desktop {
+        display: flex;
+    }
+}
+#navLinks.desplegado {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: v.$black;
+    width: 100%;
+    padding: 1rem;
 }
