--- a/src/scss/templates/_nav.scss
+++ b/src/scss/templates/_nav.scss
@@ -24,37 +24,25 @@
     }
 
     @include m.mobile {
-        #nav-mobile {
+        #nav-small {
             display: flex;
             flex-direction: column;
             align-items: center;
         }
 
-        #nav-tablet, #nav-desktop {
+        #nav-large {
             display: none;
         }
     }
 
     @include m.tablet {
-        #nav-tablet {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-        }
-
-        #nav-mobile, #nav-desktop {
-            display: none;
-        }
-    }
-
-    @include m.desktop {
-        #nav-desktop {
+        #nav-large {
             display: flex;
             justify-content: space-between;
             flex-direction: row;
         }
 
-        #nav-mobile, #nav-tablet {
+        #nav-small {
             display: none;
         }
     }
@@ -68,11 +56,18 @@
         &-logo {
             display: flex;
             align-items: center;
+            flex-direction: column;
+            margin-bottom: 2rem;
+
+            @include m.tablet {
+                flex-direction: row;
+                margin-bottom: 0;
+            }
 
             &--toggle {
                 display: block;
 
-                @include m.desktop {
+                @include m.tablet {
                     display: none;
                 }
             }
@@ -149,7 +144,7 @@
     &__links {
         display: none;
 
-        @include m.desktop {
+        @include m.tablet {
             display: flex;
             flex-direction: row;
         }
@@ -184,7 +179,7 @@
 #navLinks {
     display: none;
     
-    @include m.desktop {
+    @include m.tablet {
         display: flex;
     }
 }
