--- a/src/scss/templates/_nav.scss
+++ b/src/scss/templates/_nav.scss
@@ -182,12 +182,13 @@
     @include m.tablet {
         display: flex;
     }
-}
-#navLinks.desplegado {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: v.$black;
-    width: 100%;
-    padding: 1rem;
+    
+    &.desplegado {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: v.$black;
+        width: 100%;
+        padding: 1rem;
+    }
 }
