Botones Deployment y Repository para cada proyecto

--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -35,3 +35,11 @@ img {
         background-color: v.$marron;
     }
 }
+
+.btnGeneral--disabled {
+    @extend .btnGeneral;
+    
+    &:hover {
+        cursor: not-allowed;
+    }
+}
