--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -13,6 +13,10 @@ $amarillo: #fdc029;
 $anaranjado: #e48c27;
 $marron: #8a370a;
 
+$anaranjado-disabled: #e9ad69;
+$marron-disabled:rgb(132, 75, 44);
+$white-disabled: #cfcdcd;
+
 $white: #FFFFFF;
 $gray: #313131;
 $gray-light: #696969;
