Agregando bordes redondeados a todas las esquinas para mejora visual

--- a/src/scss/pages/_proyects.scss
+++ b/src/scss/pages/_proyects.scss
@@ -14,6 +14,7 @@
         margin: 2rem;
         background-color: v.$anaranjado;
         width: 90%;
+        border-radius: 0.5rem;
         
         @include m.desktop {
             flex-direction: row;
