--- a/src/scss/pages/_aboutme.scss
+++ b/src/scss/pages/_aboutme.scss
@@ -46,6 +46,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            border-radius: 0.5rem;
         }
 
         &-element {
@@ -59,6 +60,7 @@
             margin: 2rem;
             padding: 1rem;
             background-color: v.$marron;
+            border-radius: 0.5rem;
 
             &::before {
                 content: "";
@@ -115,6 +117,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            border-radius: 0.5rem;
         }
 
         &-titule {
@@ -142,6 +145,8 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
+            background-color: v.$marron;
+            border-radius: 0.5rem;
 
             @include m.tablet {
                 flex-direction: row;
@@ -188,7 +193,6 @@
             list-style: none;
             justify-content: center;
             padding: 0;
-            background-color: v.$marron;
         }
     }
 }
